--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
   },
   "homepage": "https://github.com/jimkang/canonicalizer",
   "devDependencies": {
-    "mocha": "~1.18.2"
+    "mocha": "^5.2.0"
   },
   "dependencies": {
     "inflection": "^1.5.3",
-    "lodash": "^2.4.1"
+    "lodash.find": "^4.6.0",
+    "lodash.invert": "^4.3.0"
   }
 }
